# sentiment_github

./: .gitignore  README.md  fetch_github.py  logging_setup.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  sentiment_analysis.py  tox.ini
.github/workflows/: tests.yml
analyse/: fetch_github.py
sentiment_analysis/: sentiment_analysis.py
src/analyse/: __main__.py  fetch_github.py  sentiment_analysis.py
tests/: test_cases.json  test_fetch_github.py
